--- a/css/style.css
+++ b/css/style.css
@@ -105,8 +105,11 @@ li{
     #grids{
 
         display: block;
+        margin-bottom: 100px;
     }
     #foot{
-        margin-top: 200px;
+        position: absolute;
+        top:290%;
+        left: 30%;
     }
 }
